@@ -6,6 +6,8 @@ Revision history for Perl extension Apache::Gallery.
 X.X Thu Sep 15 14:47:51 CEST 2005
 
 	- Add watermark even when picture doesn't need to be rescaled
+	  (Andreas Plesner)
+	- Fix logging to work in Apache 1.3 (Andreas Plesner)
 
 1.0RC2 Wed Jun  1 09:11:50 CEST 2005
 
